--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "@bnb/card",
-  "version": "1.6.0",
-  "description": "A personal card for Tierney Cyren (@bitandbang)",
+  "name": "@kilodalton/card",
+  "version": "0.0.1",
+  "description": "A personal card for Karen Dalton (@kilodalton)",
   "main": "/bin/card.js",
   "bin": {
-    "bitandbang": "./bin/card.js"
+    "kilodalton": "./bin/card.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bnb/bitandbang.git"
+    "url": "git+https://github.com/kilodalton/kilodalton_npx_card.git"
   },
-  "homepage": "https://bnb.im",
+  "homepage": "https://kilodalton.com",
   "scripts": {
     "prepublish": "npm run build",
     "build": "node build.js",
@@ -26,7 +26,7 @@
     "npx card",
     "business card"
   ],
-  "author": "Tierney Cyren <hello@bnb.im> (http://bnb.im)",
+  "author": "Karen Dalton <hello@kilodalton.com> (https://kilodalton.com)",
   "license": "MIT",
   "files": [
     "bin/card.js",
@@ -38,7 +38,7 @@
     "standard": "^12.0.1"
   },
   "bugs": {
-    "url": "https://github.com/bnb/bitandbang/issues"
+    "url": "https://github.com/kilodalton/kilodalton_npx_card/issues"
   },
   "dependencies": {},
   "publishConfig": {
