--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kilodalton/kilodalton_npx_card.git"
+    "url": "git+https://github.com/kilodalton/card.git"
   },
   "homepage": "https://kilodalton.com",
   "scripts": {
@@ -38,7 +38,7 @@
     "standard": "^12.0.1"
   },
   "bugs": {
-    "url": "https://github.com/kilodalton/kilodalton_npx_card/issues"
+    "url": "https://github.com/kilodalton/card/issues"
   },
   "dependencies": {},
   "publishConfig": {
